支持集成添加

--- a/custom_components/xiaomi_tv/translations/en.json
+++ b/custom_components/xiaomi_tv/translations/en.json
@@ -8,8 +8,8 @@
                 "description": "",
                 "title": "小米电视配置",
                 "data": {
-                    "name": "小米电视",
-                    "host": "小米电视局域网IP地址"
+                    "name": "名称",
+                    "host": "IP地址"
                 }
             }
         }
