--- a/custom_components/xiaomi_tv/translations/en.json
+++ b/custom_components/xiaomi_tv/translations/en.json
@@ -1,12 +1,13 @@
 {
+    "title": "小米电视",
     "config": {
         "abort": {
             "single_instance_allowed": "仅允许单个配置"
         },
         "step": {
             "user": {
-                "description": "",
                 "title": "小米电视配置",
+                "description": "",
                 "data": {
                     "name": "名称",
                     "host": "IP地址"
@@ -14,5 +15,17 @@
             }
         }
     },
-    "title": "小米电视"
+    "options": {
+        "step": {
+            "user": {
+                "title": "直播源配置",
+                "description": "因为网上免费的直播源经常失效，需要花时间精力去更新维护，所以此功能付费使用，有需要请联系我",
+                "data": {
+                    "tv_url": "这里是由我提供的直播源地址，请勿随意填写",
+                    "remote_card": "启用遥控器卡片"
+                }
+            }
+        },
+        "error": {}
+    }
 }
