删除遥控器实体

--- a/custom_components/xiaomi_tv/translations/en.json
+++ b/custom_components/xiaomi_tv/translations/en.json
@@ -20,6 +20,8 @@
                 }
             }
         },
-        "error": {}
+        "error": {
+            "404": "没有发现小米电视设备"
+        }
     }
 }
