优化自动发现

--- a/custom_components/xiaomi_tv/translations/en.json
+++ b/custom_components/xiaomi_tv/translations/en.json
@@ -16,7 +16,7 @@
             "user": {
                 "description": "选择当前局域网中的小米电视设备",
                 "data": {
-                    "host": "IP地址"
+                    "ip": "小米电视设备"
                 }
             }
         },
